2005-03-17  Pavel Roskin  <proski@gnu.org>

	* screen.c (chdir_other_panel): Prevent changing current
	directory.  Remove incorrect comment.

	* achown.c (update_permissions): Partly revert recent changes
	because they cause infinite recusion.

2005-03-10  Roland Illig  <roland.illig@gmx.de>

	* x11conn.c: Separated X11 connection handling from key.c. Added
	error handling for X11 errors and connection errors.
	* x11conn.h: The interface for x11conn.h.
	* key.c: Now using the x11conn code.
	* Makefile.am: Added x11conn.{h,c}.

2005-02-26  Miguel de Icaza  <miguel@novell.com>

	* screen.c (chdir_other_panel): Restored original functionality.

	(sync_other_panel): This is now bound to the key Alt-i, and is the
	functionality that was lost.

2005-01-29  Miguel de Icaza  <miguel@novell.com>

	* utilunix.c (init_groups): Added support for getgrouplist patch
	from Stefan Gohmann <gohmann@univention.de>.

2005-02-23  Roland Illig  <roland.illig@gmx.de>

	* tty.h: Moved the function printwstr to slint.c, because the
	SunPro compiler does not eliminate unused inline functions.
	* slint.c: printwstr has been moved to here.
	* unixcompat.h: Only include <sys/sysmacros.h> if we're on AIX,
	as Solaris defines the macros twice---once in <sys/mkdev.h>,
	and once in <sys/sysmacros.h>.

2005-02-23  Roland Illig  <roland.illig@gmx.de>

	* screen.c: Changed the return type of ilog10 to unsigned int
	and adjusted some variables in format_device_number.

2005-02-22  Roland Illig  <roland.illig@gmx.de>

	* unixcompat.h: Added missing parenthesis to the minor() macro.

2005-02-12  Roland Illig  <roland.illig@gmx.de>

	* info.c (info_show_info): Casted st_mode to unsigned to avoid
	compiler warning on Solaris 9 (st_mode is unsigned long there).

2005-02-12  Jindrich Novy  <jnovy@redhat.com>

	* vfs.c (vfs_translate_url): Add support for smb://, sh://,
	ssh:// and mc:// filesystem requests. Introduced separate table
	for vfs aliases.